stretch: modal signup form

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
 
           <!-- The Modal -->
-          <div id="signUp" class="signUp">
+          <div id="sign-up" class="sign-up">
             <!-- Modal content -->
             <div class="modal-content">
               <span class="close">&times;</span>
@@ -109,7 +109,7 @@
     </div>
     <script>
       // Get the modal
-      var modal = document.getElementById('signUp')
+      var modal = document.getElementById('sign-up')
 
       // Get the button that opens the modal
       var btn = document.getElementById('btn')
