--- a/index.html
+++ b/index.html
@@ -93,7 +93,17 @@
             <!-- Modal content -->
             <div class="modal-content">
               <span class="close">&times;</span>
-              <p>Some text in the Modal..</p>
+              <h2>Sign up for a SpaceWalkers Magazine subscription</h2>
+              <form>
+                <input type="text" placeholder="Name" name="name" required />
+                <input
+                  type="text"
+                  placeholder="Email address"
+                  name="mail"
+                  required
+                />
+                <input type="submit" value="Sign Up" />
+              </form>
             </div>
           </div>
         </div>
